--- a/index.html
+++ b/index.html
@@ -5100,8 +5100,8 @@ body.cinematic-mode .start-overlay {
 // LOADING SCREEN CONFIGURATION
 // ============================================
 const LOADING_CONFIG = {
-    enabled: false,             // Disabled
-    mode: 'slideshow',
+    enabled: true,             // Disabled
+    mode: 'cinematic',
     skipButton: true,
     autoSkipAfter: null
 };
