--- a/index.html
+++ b/index.html
@@ -5101,7 +5101,7 @@ body.cinematic-mode .start-overlay {
 // ============================================
 const LOADING_CONFIG = {
     enabled: true,             // Disabled
-    mode: 'slideshow',
+    mode: 'cinematic',
     skipButton: true,
     autoSkipAfter: null
 };
