fix cinematic mode

--- a/index.html
+++ b/index.html
@@ -4133,7 +4133,7 @@ body.cinematic-mode .start-overlay {
 <div class="scroll-progress"></div>
 
 <!-- Cinematic Trailer with Start Button -->
-<div class="loader" style="display: none !important;">
+<div class="loader">
     <!-- Start Button Overlay -->
     <div class="start-overlay" id="start-overlay" style="display: none !important;">
         <button class="start-btn" id="start-btn">
@@ -4221,7 +4221,7 @@ body.cinematic-mode .start-overlay {
     </div>
 </div>
 
-<div class="slideshow-loader" style="display: none !important;">
+<div class="slideshow-loader">
     <div class="slideshow-container">
         <!-- Slide 1: EMAIL MARKETING -->
         <div class="slideshow-slide slide-1">
