--- a/index.html
+++ b/index.html
@@ -5093,7 +5093,7 @@ body.slideshow-mode .start-overlay {
 // ============================================
 const LOADING_CONFIG = {
     enabled: true,             // Disabled
-    mode: 'cinematic',
+    mode: 'slideshow',
     skipButton: true,
     autoSkipAfter: null
 };
@@ -6027,7 +6027,6 @@ document.addEventListener('keydown', (e) => {
 
 
 </script>
-<!-- Liquid Glass SVG Filters -->
 <!-- Liquid Glass SVG Filters -->
 <svg xmlns="http://www.w3.org/2000/svg" width="0" height="0" style="position:absolute; overflow:hidden">
     <defs>
