--- a/index.html
+++ b/index.html
@@ -674,21 +674,6 @@ body.loading .filter-btn::before,
 body.loading .filter-btn::after {
     display: none !important;
 }
-/* Hide cursor during loading screens */
-body.loading .cursor,
-body.loading .cursor-follower {
-    display: none !important;
-    opacity: 0 !important;
-    pointer-events: none !important;
-}
-
-/* Show cursor only when loaded */
-body.loaded .cursor,
-body.loaded .cursor-follower {
-    display: flex !important;
-    opacity: 1 !important;
-    pointer-events: auto !important;
-}
 
 .filter-btn,
 .skip-intro,
@@ -2230,7 +2215,7 @@ box-shadow: var(--shadow-md);
 .cinematic-bars {
     position: absolute;
     width: 100%;
-    height: 500px;  /* Made slightly taller */
+    height: 200px;  /* Made slightly taller */
     background: linear-gradient(to bottom, #000 0%, #111 100%);  /* Gradient instead of solid */
     z-index: 10;
     transform: translate3d(0, 0, 0);
@@ -2268,7 +2253,7 @@ box-shadow: var(--shadow-md);
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 500px 20px;
+    padding: 200px 20px;
     opacity: 0;
     visibility: hidden; /* ADD THIS */
     transform: translate3d(0, 0, 0);
@@ -5379,11 +5364,13 @@ if (particlesContainer) {
 // ============================================
 // PREMIUM CURSOR
 // ============================================
-
+// ============================================
+// PREMIUM CURSOR
+// ============================================
+ // ============================================
         // FIX: Wait for DOM to be fully loaded
         // ============================================
         document.addEventListener('DOMContentLoaded', () => {
-        
             // ============================================
             // HIDE DEFAULT CURSOR - FIXED VERSION
             // ============================================
