--- a/index.html
+++ b/index.html
@@ -6424,8 +6424,8 @@ footer::before {
 // LOADING SCREEN CONFIGURATION
 // ============================================
 const LOADING_CONFIG = {
-    enabled: false,             // Disabled
-    mode: 'slideshow',
+    enabled: true,             // Disabled
+    mode: 'cinematic',
     skipButton: true,
     autoSkipAfter: null
 };
