--- a/index.html
+++ b/index.html
@@ -1351,6 +1351,9 @@ nav::after {
             backdrop-filter: blur(3px);
         }
         
+        .start-overlay {
+    position: fixed;
+        }
         .portfolio-item:hover .portfolio-overlay {
             opacity: 1;
         }
@@ -2063,19 +2066,20 @@ box-shadow: var(--shadow-md);
 
 /* Start Button Overlay */
 .start-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.95);
-    display: flex;
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100vw !important;
+    height: 100vh !important;
+    background: rgba(0, 0, 0, 0.95) !important;
+    display: flex !important;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    z-index: 100;
+    z-index: 1000000 !important;
     gap: 20px;
-    transition: all 0.6s ease;
+    opacity: 1 !important;
+    visibility: visible !important;
 }
 
 .start-overlay.hidden {
@@ -7525,4 +7529,4 @@ if (lightbox) {
     <div class="cursor"></div>
     <div class="cursor-follower"></div>
 </body>
-</html>
+</html>q
