--- a/index.html
+++ b/index.html
@@ -6445,7 +6445,7 @@ footer::before {
 // LOADING SCREEN CONFIGURATION
 // ============================================
 const LOADING_CONFIG = {
-    enabled: true,             // Disabled
+    enabled: false,             // Disabled
     mode: 'cinematic',
     skipButton: true,
     autoSkipAfter: null
